--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -14,15 +14,15 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0">
-         <children>
-            <Button layoutX="127.0" layoutY="41.0" mnemonicParsing="false" onAction="#buttonPressed" text="clicc" />
-         </children>
-      </AnchorPane>
       <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
          <children>
             <Button layoutX="116.0" layoutY="41.0" mnemonicParsing="false" onAction="#listFiles" text="list files" />
          </children>
       </AnchorPane>
+       <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+           <children>
+               <Button layoutX="116.0" layoutY="41.0" mnemonicParsing="false" onAction="#exit" text="exit" />
+           </children>
+       </AnchorPane>
    </children>
 </GridPane>
